k8s/omed/base/omed-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omed
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: omed
  template:
    metadata:
      labels:
        app: omed
    spec:
      containers:
        - image: jabczyk/przychodnia-pk
          name: omed
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 2000m
              memory: 3072Mi
          # Liveness - if not live, pod will be restarted
          livenessProbe:
            httpGet:
              path: /#liveness
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
          # Readiness - kubernetes can accept traffic
          readinessProbe:
            httpGet:
              path: /#readiness
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
      imagePullSecrets:
        - name: registry-token
