k8s/omed/base/omed-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omed
spec:
  selector:
    app: omed
  ports:
    - port: 80
      targetPort: 3000
