k8s/omed/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    # omed, host [0]
    - host: replacement-host.antonovka.co
      http: &backend_http_rules
        paths:
          - path: /
            pathType: Prefix
            backend: &backend_service
              service:
                name: omed
                port:
                  number: 80
